--- a/result/projectcode.ipynb
+++ b/result/projectcode.ipynb
@@ -2,17 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Loaded image: img_0569.png, Shape: (224, 224, 3)\n",
+      "Loaded image: img_0410.png, Shape: (224, 224, 3)\n",
       "Loaded image: image0.jpg, Shape: (224, 224, 3)\n",
-      "Loaded image: img_0414.png, Shape: (224, 224, 3)\n",
       "Loaded image: img_0423.png, Shape: (224, 224, 3)\n",
-      "Loaded image: img_0410.png, Shape: (224, 224, 3)\n"
+      "Loaded image: img_0414.png, Shape: (224, 224, 3)\n",
+      "Loaded image: img_0517.png, Shape: (224, 224, 3)\n"
      ]
     }
    ],
@@ -98,11 +100,18 @@
     "for img_rgb, img_gray, filename in image_loader:\n",
     "    print(f\"Loaded image: {filename}, Shape: {img_rgb.shape}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -116,7 +125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
