--- a/result/projectcode.ipynb
+++ b/result/projectcode.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded image: img_0569.png, Shape: (224, 224, 3)\n",
-      "Loaded image: img_0410.png, Shape: (224, 224, 3)\n",
-      "Loaded image: image0.jpg, Shape: (224, 224, 3)\n",
-      "Loaded image: img_0423.png, Shape: (224, 224, 3)\n",
-      "Loaded image: img_0414.png, Shape: (224, 224, 3)\n",
-      "Loaded image: img_0517.png, Shape: (224, 224, 3)\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[WinError 3] The system cannot find the path specified: 'data'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 72\u001b[0m\n\u001b[0;32m     67\u001b[0m                 img_gray \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtransform(img_gray)\n\u001b[0;32m     69\u001b[0m             \u001b[38;5;28;01myield\u001b[39;00m img_rgb, img_gray, file_name  \n\u001b[1;32m---> 72\u001b[0m image_loader \u001b[38;5;241m=\u001b[39m \u001b[43mImageDataLoader\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdirectory\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mdata\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mshuffle\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[0;32m     74\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m img_rgb, img_gray, filename \u001b[38;5;129;01min\u001b[39;00m image_loader:\n\u001b[0;32m     75\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLoaded image: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfilename\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, Shape: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mimg_rgb\u001b[38;5;241m.\u001b[39mshape\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[1], line 41\u001b[0m, in \u001b[0;36mImageDataLoader.__init__\u001b[1;34m(self, directory, shuffle, transform)\u001b[0m\n\u001b[0;32m     38\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtransform \u001b[38;5;241m=\u001b[39m transform\n\u001b[0;32m     40\u001b[0m \u001b[38;5;66;03m# get a sorted list of all files in the directory\u001b[39;00m\n\u001b[1;32m---> 41\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfile_list \u001b[38;5;241m=\u001b[39m [f \u001b[38;5;28;01mfor\u001b[39;00m f \u001b[38;5;129;01min\u001b[39;00m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdirectory\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mif\u001b[39;00m f\u001b[38;5;241m.\u001b[39mendswith((\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.jpg\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.png\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.jpeg\u001b[39m\u001b[38;5;124m'\u001b[39m))]\n\u001b[0;32m     43\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfile_list:\n\u001b[0;32m     44\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo image files found in the directory.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 3] The system cannot find the path specified: 'data'"
      ]
     }
    ],
@@ -68,11 +68,11 @@
     "        if self.shuffle:\n",
     "            random.shuffle(self.file_list)\n",
     "\n",
-    "        # get the total number of batches\n",
-    "        self.num_batches = len(self.file_list)\n",
+    "        # get the total number of samples\n",
+    "        self.num_samples = len(self.file_list)\n",
     "\n",
     "    def __len__(self):\n",
-    "        return self.num_batches\n",
+    "        return self.num_samples\n",
     "\n",
     "    def __iter__(self):\n",
     "        # fill in with your own code below\n",
@@ -90,15 +90,28 @@
     "            yield img_rgb, img_gray, file_name  \n",
     "\n",
     "\n",
-    "\n",
-    "def simple_transform(img):\n",
-    "    return cv2.resize(img, (224, 224))  \n",
-    "\n",
-    "image_loader = ImageDataLoader(directory=\"..\\\\data\", shuffle=True, transform=simple_transform)\n",
-    "\n",
+    "image_loader = ImageDataLoader(directory=\"data\", shuffle=True)\n",
     "\n",
     "for img_rgb, img_gray, filename in image_loader:\n",
-    "    print(f\"Loaded image: {filename}, Shape: {img_rgb.shape}\")\n"
+    "    print(f\"Loaded image: {filename}, Shape: {img_rgb.shape}\")\n",
+    "\n",
+    "def removeHair(img_org, img_gray, kernel_size=25, threshold=10, radius=3):\n",
+    "    \"\"\"detects and removes hair from images\"\"\"\n",
+    "    # kernel for the morphological filtering\n",
+    "    kernel = cv2.getStructuringElement(cv2.MORPH_CROSS, (kernel_size, kernel_size))\n",
+    "\n",
+    "    # perform the blackHat filtering on the grayscale image to find the hair countours\n",
+    "    blackhat = cv2.morphologyEx(img_gray, cv2.MORPH_BLACKHAT, kernel)\n",
+    "\n",
+    "    # intensify the hair countours in preparation for the inpainting algorithm\n",
+    "    _, thresh = cv2.threshold(blackhat, threshold, 255, cv2.THRESH_BINARY)\n",
+    "\n",
+    "    # inpaint the original image depending on the mask\n",
+    "    img_out = cv2.inpaint(img_org, thresh, radius, cv2.INPAINT_TELEA)\n",
+    "\n",
+    "    return blackhat, thresh, img_out\n",
+    "    \n",
+    "\n"
    ]
   },
   {
