making changes so the path is accesible for different computersystems

--- a/result/projectcode.ipynb
+++ b/result/projectcode.ipynb
@@ -2,7 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -10,9 +17,11 @@
      "output_type": "stream",
      "text": [
       "Loaded image: image0.jpg, Shape: (224, 224, 3)\n",
-      "Loaded image: img_0414.png, Shape: (224, 224, 3)\n",
+      "Loaded image: img_0569.png, Shape: (224, 224, 3)\n",
+      "Loaded image: img_0410.png, Shape: (224, 224, 3)\n",
+      "Loaded image: img_0517.png, Shape: (224, 224, 3)\n",
       "Loaded image: img_0423.png, Shape: (224, 224, 3)\n",
-      "Loaded image: img_0410.png, Shape: (224, 224, 3)\n"
+      "Loaded image: img_0414.png, Shape: (224, 224, 3)\n"
      ]
     }
    ],
@@ -92,17 +101,24 @@
     "def simple_transform(img):\n",
     "    return cv2.resize(img, (224, 224))  \n",
     "\n",
-    "image_loader = ImageDataLoader(directory=\"..\\\\data\", shuffle=True, transform=simple_transform)\n",
+    "image_loader = ImageDataLoader(directory=\"../data\", shuffle=True, transform=simple_transform)\n",
     "\n",
     "\n",
     "for img_rgb, img_gray, filename in image_loader:\n",
     "    print(f\"Loaded image: {filename}, Shape: {img_rgb.shape}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -116,7 +132,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
