def removeHair aadded to the project code

--- a/result/projectcode.ipynb
+++ b/result/projectcode.ipynb
@@ -9,18 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded image: image0.jpg, Shape: (224, 224, 3)\n",
-      "Loaded image: img_0569.png, Shape: (224, 224, 3)\n",
       "Loaded image: img_0410.png, Shape: (224, 224, 3)\n",
+      "Loaded image: image0.jpg, Shape: (224, 224, 3)\n",
       "Loaded image: img_0517.png, Shape: (224, 224, 3)\n",
       "Loaded image: img_0423.png, Shape: (224, 224, 3)\n",
+      "Loaded image: img_0569.png, Shape: (224, 224, 3)\n",
       "Loaded image: img_0414.png, Shape: (224, 224, 3)\n"
      ]
     }
@@ -97,15 +97,27 @@
     "            yield img_rgb, img_gray, file_name  \n",
     "\n",
     "\n",
-    "\n",
-    "def simple_transform(img):\n",
-    "    return cv2.resize(img, (224, 224))  \n",
-    "\n",
-    "image_loader = ImageDataLoader(directory=\"../data\", shuffle=True, transform=simple_transform)\n",
+    "image_loader = ImageDataLoader(directory=\"../data\", shuffle=True)\n",
     "\n",
     "\n",
     "for img_rgb, img_gray, filename in image_loader:\n",
-    "    print(f\"Loaded image: {filename}, Shape: {img_rgb.shape}\")\n"
+    "    print(f\"Loaded image: {filename}, Shape: {img_rgb.shape}\")\n",
+    "\n",
+    "def removeHair(img_org, img_gray, kernel_size=25, threshold=10, radius=3):\n",
+    "    \"\"\"detects and removes hair from images\"\"\"\n",
+    "    # kernel for the morphological filtering\n",
+    "    kernel = cv2.getStructuringElement(cv2.MORPH_CROSS, (kernel_size, kernel_size))\n",
+    "\n",
+    "    # perform the blackHat filtering on the grayscale image to find the hair countours\n",
+    "    blackhat = cv2.morphologyEx(img_gray, cv2.MORPH_BLACKHAT, kernel)\n",
+    "\n",
+    "    # intensify the hair countours in preparation for the inpainting algorithm\n",
+    "    _, thresh = cv2.threshold(blackhat, threshold, 255, cv2.THRESH_BINARY)\n",
+    "\n",
+    "    # inpaint the original image depending on the mask\n",
+    "    img_out = cv2.inpaint(img_org, thresh, radius, cv2.INPAINT_TELEA)\n",
+    "\n",
+    "    return blackhat, thresh, img_out\n"
    ]
   },
   {
