tested different kernel sizes and thredshold for the hair removal. Uploaded interesting results.

--- a/result/projectcode.ipynb
+++ b/result/projectcode.ipynb
@@ -164,213 +164,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "img_0393.png\n",
-      "img_0394.png\n",
-      "img_0395.png\n",
-      "img_0396.png\n",
-      "img_0397.png\n",
-      "img_0398.png\n",
-      "img_0399.png\n",
-      "img_0400.png\n",
-      "img_0401.png\n",
-      "img_0402.png\n",
-      "img_0403.png\n",
-      "img_0404.png\n",
-      "img_0405.png\n",
-      "img_0406.png\n",
-      "img_0407.png\n",
-      "img_0408.png\n",
-      "img_0409.png\n",
-      "img_0410.png\n",
-      "img_0411.png\n",
-      "img_0412.png\n",
-      "img_0413.png\n",
-      "img_0414.png\n",
-      "img_0415.png\n",
-      "img_0416.png\n",
-      "img_0417.png\n",
-      "img_0418.png\n",
-      "img_0419.png\n",
-      "img_0420.png\n",
-      "img_0421.png\n",
-      "img_0422.png\n",
-      "img_0423.png\n",
-      "img_0424.png\n",
-      "img_0425.png\n",
-      "img_0426.png\n",
-      "img_0427.png\n",
-      "img_0428.png\n",
-      "img_0429.png\n",
-      "img_0430.png\n",
-      "img_0431.png\n",
-      "img_0432.png\n",
-      "img_0433.png\n",
-      "img_0434.png\n",
-      "img_0435.png\n",
-      "img_0436.png\n",
-      "img_0437.png\n",
-      "img_0438.png\n",
-      "img_0439.png\n",
-      "img_0440.png\n",
-      "img_0441.png\n",
-      "img_0442.png\n",
-      "img_0443.png\n",
-      "img_0444.png\n",
-      "img_0445.png\n",
-      "img_0446.png\n",
-      "img_0447.png\n",
-      "img_0448.png\n",
-      "img_0449.png\n",
-      "img_0450.png\n",
-      "img_0451.png\n",
-      "img_0452.png\n",
-      "img_0453.png\n",
-      "img_0454.png\n",
-      "img_0455.png\n",
-      "img_0456.png\n",
-      "img_0457.png\n",
-      "img_0458.png\n",
-      "img_0459.png\n",
-      "img_0460.png\n",
-      "img_0461.png\n",
-      "img_0462.png\n",
-      "img_0463.png\n",
-      "img_0464.png\n",
-      "img_0465.png\n",
-      "img_0466.png\n",
-      "img_0467.png\n",
-      "img_0468.png\n",
-      "img_0469.png\n",
-      "img_0470.png\n",
-      "img_0471.png\n",
-      "img_0472.png\n",
-      "img_0473.png\n",
-      "img_0474.png\n",
-      "img_0475.png\n",
-      "img_0476.png\n",
-      "img_0477.png\n",
-      "img_0478.png\n",
-      "img_0479.png\n",
-      "img_0480.png\n",
-      "img_0481.png\n",
-      "img_0482.png\n",
-      "img_0483.png\n",
-      "img_0484.png\n",
-      "img_0485.png\n",
-      "img_0486.png\n",
-      "img_0487.png\n",
-      "img_0488.png\n",
-      "img_0489.png\n",
-      "img_0490.png\n",
-      "img_0491.png\n",
-      "img_0492.png\n",
-      "img_0493.png\n",
-      "img_0494.png\n",
-      "img_0495.png\n",
-      "img_0496.png\n",
-      "img_0497.png\n",
-      "img_0498.png\n",
-      "img_0499.png\n",
-      "img_0500.png\n",
-      "img_0501.png\n",
-      "img_0502.png\n",
-      "img_0503.png\n",
-      "img_0504.png\n",
-      "img_0505.png\n",
-      "img_0506.png\n",
-      "img_0507.png\n",
-      "img_0508.png\n",
-      "img_0509.png\n",
-      "img_0510.png\n",
-      "img_0511.png\n",
-      "img_0512.png\n",
-      "img_0513.png\n",
-      "img_0514.png\n",
-      "img_0515.png\n",
-      "img_0516.png\n",
-      "img_0517.png\n",
-      "img_0518.png\n",
-      "img_0519.png\n",
-      "img_0520.png\n",
-      "img_0521.png\n",
-      "img_0522.png\n",
-      "img_0523.png\n",
-      "img_0524.png\n",
-      "img_0525.png\n",
-      "img_0526.png\n",
-      "img_0527.png\n",
-      "img_0528.png\n",
-      "img_0529.png\n",
-      "img_0530.png\n",
-      "img_0531.png\n",
-      "img_0532.png\n",
-      "img_0533.png\n",
-      "img_0534.png\n",
-      "img_0535.png\n",
-      "img_0536.png\n",
-      "img_0537.png\n",
-      "img_0538.png\n",
-      "img_0539.png\n",
-      "img_0540.png\n",
-      "img_0541.png\n",
-      "img_0542.png\n",
-      "img_0543.png\n",
-      "img_0544.png\n",
-      "img_0545.png\n",
-      "img_0546.png\n",
-      "img_0547.png\n",
-      "img_0548.png\n",
-      "img_0549.png\n",
-      "img_0550.png\n",
-      "img_0551.png\n",
-      "img_0552.png\n",
-      "img_0553.png\n",
-      "img_0554.png\n",
-      "img_0555.png\n",
-      "img_0556.png\n",
-      "img_0557.png\n",
-      "img_0558.png\n",
-      "img_0559.png\n",
-      "img_0560.png\n",
-      "img_0561.png\n",
-      "img_0562.png\n",
-      "img_0563.png\n",
-      "img_0564.png\n",
-      "img_0565.png\n",
-      "img_0566.png\n",
-      "img_0567.png\n",
-      "img_0568.png\n",
-      "img_0569.png\n",
-      "img_0570.png\n",
-      "img_0571.png\n",
-      "img_0572.png\n",
-      "img_0573.png\n",
-      "img_0574.png\n",
-      "img_0575.png\n",
-      "img_0576.png\n",
-      "img_0577.png\n",
-      "img_0578.png\n",
-      "img_0579.png\n",
-      "img_0580.png\n",
-      "img_0581.png\n",
-      "img_0582.png\n",
-      "img_0583.png\n",
-      "img_0584.png\n",
-      "img_0585.png\n",
-      "img_0586.png\n",
-      "img_0587.png\n",
-      "img_0588.png\n",
-      "img_0589.png\n",
-      "img_0590.png\n",
-      "img_0591.png\n",
-      "img_0592.png\n",
       "All processed images have been saved in /Users/philiphansen/Documents/itu/projects_in_ds/group-D-images/processed_images\n"
      ]
     }
@@ -378,12 +178,11 @@
    "source": [
     "for i in range(len(group_D_images)):\n",
     "    # read all the images\n",
-    "    print(group_D_images.file_list[i])\n",
     "    img_rgb, img_gray = readImageFile(f\"/Users/philiphansen/Documents/itu/projects_in_ds/group-D-images/{group_D_images.file_list[i]}\")\n",
     "    filename = os.path.splitext(os.path.basename(group_D_images.file_list[i]))[0]\n",
     "\n",
     "    #apply the hair removal\n",
-    "    blackhat, thresh, img_out = removeHair(img_rgb, img_gray)\n",
+    "    blackhat, thresh, img_out = removeHair(img_rgb, img_gray, kernel_size=25, threshold=2, radius=3)\n",
     "\n",
     "    # save the processed images\n",
     "    cv2.imwrite(os.path.join(output_dir, f\"{filename}_blackhat.png\"), blackhat)\n",
