--- a/result/projectcode.ipynb
+++ b/result/projectcode.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -30,8 +30,8 @@
     "import os \n",
     "import cv2\n",
     "\n",
-    "\n",
     "def readImageFile(file_path):\n",
+    "\n",
     "    # read image as an 8-bit array\n",
     "    img_bgr = cv2.imread(file_path)\n",
     "\n",
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -176,10 +176,16 @@
     }
    ],
    "source": [
+    "group_D_file_numbers = list(range(393, 593))\n",
+    "\n",
     "for i in range(len(group_D_images)):\n",
     "    # read all the images\n",
     "    img_rgb, img_gray = readImageFile(f\"/Users/philiphansen/Documents/itu/projects_in_ds/group-D-images/{group_D_images.file_list[i]}\")\n",
     "    filename = os.path.splitext(os.path.basename(group_D_images.file_list[i]))[0]\n",
+    "\n",
+    "    # don't proces images not from group D\n",
+    "    if int(filename.removeprefix(\"img_0\")) not in group_D_file_numbers:\n",
+    "        continue\n",
     "\n",
     "    #apply the hair removal\n",
     "    blackhat, thresh, img_out = removeHair(img_rgb, img_gray, kernel_size=25, threshold=2, radius=3)\n",
