--- a/result/analysis_results.ipynb
+++ b/result/analysis_results.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Dara Marta Filip Philip Maja\n",
+      "0   68    67    76     58   70\n",
+      "1   79    77    72     78   78\n",
+      "2   53    56    52     64   52\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -70,7 +80,7 @@
        "1  [Dara, Marta, Philip]     [Maja]  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +91,15 @@
     "df = pd.read_csv(\"results.csv\")\n",
     "brutal_disagreements = []\n",
     "\n",
+    "\n",
     "for index, row in df.iterrows():\n",
+    "    # count how many times each person voted for 0, 1, or 2\n",
+    "    vote_counts = pd.DataFrame(columns=['Dara', 'Marta', 'Filip', 'Philip', 'Maja'], index=[0, 1, 2])\n",
+    "\n",
+    "    for person in ['Dara', 'Marta', 'Filip', 'Philip', 'Maja']:\n",
+    "        for rank in [0, 1, 2]:\n",
+    "            vote_counts.loc[rank, person] = (df[person + '_ranking'] == rank).sum()\n",
+    "\n",
     "    # get all rankings for the image\n",
     "    rankings = row[['Dara_ranking', 'Marta_ranking', 'Filip_ranking', 'Philip_ranking', 'Maja_ranking']].values\n",
     "    \n",
@@ -108,6 +126,9 @@
     "\n",
     "\n",
     "brutal_disagreement_df = pd.DataFrame(brutal_disagreements)\n",
+    "\n",
+    "\n",
+    "print(vote_counts)\n",
     "brutal_disagreement_df\n"
    ]
   }
